--- a/vercel.json
+++ b/vercel.json
@@ -2,28 +2,28 @@
     "version": 2,
     "builds": [
       {
-        "src": "../server/app.js",  
-        "use": "@vercel/node"  
+        "src": "server/app.js",
+        "use": "@vercel/node"
       },
       {
-        "src": "../client/package.json",  
-        "use": "@vercel/static-build"  
-    }
+        "src": "client/package.json",
+        "use": "@vercel/static-build"
+      }
     ],
     "routes": [
-      { "handle": "filesystem" },  
+      { "handle": "filesystem" },
       {
         "src": "/api/token",
-        "dest": "../server/app.js"   
-    },
+        "dest": "server/app.js"
+      },
       {
         "src": "/api/justify",
-        "dest": "../server/app.js"  
-    },
+        "dest": "server/app.js"
+      },
       {
         "src": "/api/getemail/:token",
-        "dest": "../server/app.js"    
-    }
+        "dest": "server/app.js"
+      }
     ]
   }
   
